include/constantine/curves/bn254_snarks.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fp;
typedef struct { bn254_snarks_fp c[2]; } bn254_snarks_fp2;
typedef struct { bn254_snarks_fp2 x, y, z; } bn254_snarks_g2_prj;
void        ctt_big254_from_bn254_snarks_fr(big254* dst, const bn254_snarks_fr* src);
void        ctt_bn254_snarks_fr_from_big254(bn254_snarks_fr* dst, const big254* src);
ctt_bool    ctt_bn254_snarks_fr_unmarshalBE(bn254_snarks_fr* dst, const byte src[], size_t src_len) __attribute__((warn_unused_result));
ctt_bool    ctt_bn254_snarks_fr_marshalBE(byte dst[], size_t dst_len, const bn254_snarks_fr* src) __attribute__((warn_unused_result));
secret_bool ctt_bn254_snarks_fr_is_eq(const bn254_snarks_fr* a, const bn254_snarks_fr* b);
secret_bool ctt_bn254_snarks_fr_is_zero(const bn254_snarks_fr* a);
secret_bool ctt_bn254_snarks_fr_is_one(const bn254_snarks_fr* a);
secret_bool ctt_bn254_snarks_fr_is_minus_one(const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_set_zero(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_set_one(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_set_minus_one(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_neg(bn254_snarks_fr* r, const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_neg_in_place(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_sum(bn254_snarks_fr* r, const bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_add_in_place(bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_diff(bn254_snarks_fr* r, const bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_sub_in_place(bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_double(bn254_snarks_fr* r, const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_double_in_place(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_prod(bn254_snarks_fr* r, const bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_mul_in_place(bn254_snarks_fr* a, const bn254_snarks_fr* b);
void        ctt_bn254_snarks_fr_square(bn254_snarks_fr* r, const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_square_in_place(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_div2(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_inv(bn254_snarks_fr* r, const bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_inv_in_place(bn254_snarks_fr* a);
void        ctt_bn254_snarks_fr_ccopy(bn254_snarks_fr* a, const bn254_snarks_fr* b, secret_bool ctl);
void        ctt_bn254_snarks_fr_cswap(bn254_snarks_fr* a, bn254_snarks_fr* b, secret_bool ctl);
void        ctt_bn254_snarks_fr_cset_zero(bn254_snarks_fr* a, secret_bool ctl);
void        ctt_bn254_snarks_fr_cset_one(bn254_snarks_fr* a, secret_bool ctl);
void        ctt_bn254_snarks_fr_cneg_in_place(bn254_snarks_fr* a, secret_bool ctl);
void        ctt_bn254_snarks_fr_cadd_in_place(bn254_snarks_fr* a, const bn254_snarks_fr* b, secret_bool ctl);
void        ctt_bn254_snarks_fr_csub_in_place(bn254_snarks_fr* a, const bn254_snarks_fr* b, secret_bool ctl);
void        ctt_big254_from_bn254_snarks_fp(big254* dst, const bn254_snarks_fp* src);
void        ctt_bn254_snarks_fp_from_big254(bn254_snarks_fp* dst, const big254* src);
ctt_bool    ctt_bn254_snarks_fp_unmarshalBE(bn254_snarks_fp* dst, const byte src[], size_t src_len) __attribute__((warn_unused_result));
ctt_bool    ctt_bn254_snarks_fp_marshalBE(byte dst[], size_t dst_len, const bn254_snarks_fp* src) __attribute__((warn_unused_result));
secret_bool ctt_bn254_snarks_fp_is_eq(const bn254_snarks_fp* a, const bn254_snarks_fp* b);
secret_bool ctt_bn254_snarks_fp_is_zero(const bn254_snarks_fp* a);
secret_bool ctt_bn254_snarks_fp_is_one(const bn254_snarks_fp* a);
secret_bool ctt_bn254_snarks_fp_is_minus_one(const bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_set_zero(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_set_one(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_set_minus_one(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_neg(bn254_snarks_fp* r, const bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_neg_in_place(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_sum(bn254_snarks_fp* r, const bn254_snarks_fp* a, const bn254_snarks_fp* b);
void        ctt_bn254_snarks_fp_add_in_place(bn254_snarks_fp* a, const bn254_snarks_fp* b);
void        ctt_bn254_snarks_fp_diff(bn254_snarks_fp* r, const bn254_snarks_fp* a, const bn254_snarks_fp* b);
void        ctt_bn254_snarks_fp_sub_in_place(bn254_snarks_fp* a, const bn254_snarks_fp* b);
void        ctt_bn254_snarks_fp_double(bn254_snarks_fp* r, const bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_double_in_place(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_prod(bn254_snarks_fp* r, const bn254_snarks_fp* a, const bn254_snarks_fp* b);
void        ctt_bn254_snarks_fp_mul_in_place(bn254_snarks_fp* a, const bn254_snarks_fp* b);
void        ctt_bn254_snarks_fp_square(bn254_snarks_fp* r, const bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_square_in_place(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_div2(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_inv(bn254_snarks_fp* r, const bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_inv_in_place(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_ccopy(bn254_snarks_fp* a, const bn254_snarks_fp* b, secret_bool ctl);
void        ctt_bn254_snarks_fp_cswap(bn254_snarks_fp* a, bn254_snarks_fp* b, secret_bool ctl);
void        ctt_bn254_snarks_fp_cset_zero(bn254_snarks_fp* a, secret_bool ctl);
void        ctt_bn254_snarks_fp_cset_one(bn254_snarks_fp* a, secret_bool ctl);
void        ctt_bn254_snarks_fp_cneg_in_place(bn254_snarks_fp* a, secret_bool ctl);
void        ctt_bn254_snarks_fp_cadd_in_place(bn254_snarks_fp* a, const bn254_snarks_fp* b, secret_bool ctl);
void        ctt_bn254_snarks_fp_csub_in_place(bn254_snarks_fp* a, const bn254_snarks_fp* b, secret_bool ctl);
secret_bool ctt_bn254_snarks_fp_is_square(const bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_invsqrt(bn254_snarks_fp* r, const bn254_snarks_fp* a);
secret_bool ctt_bn254_snarks_fp_invsqrt_in_place(bn254_snarks_fp* r, const bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_sqrt_in_place(bn254_snarks_fp* a);
secret_bool ctt_bn254_snarks_fp_sqrt_if_square_in_place(bn254_snarks_fp* a);
void        ctt_bn254_snarks_fp_sqrt_invsqrt(bn254_snarks_fp* sqrt, bn254_snarks_fp* invsqrt, const bn254_snarks_fp* a);
secret_bool ctt_bn254_snarks_fp_sqrt_invsqrt_if_square(bn254_snarks_fp* sqrt, bn254_snarks_fp* invsqrt, const bn254_snarks_fp* a);
secret_bool ctt_bn254_snarks_fp_sqrt_ratio_if_square(bn254_snarks_fp* r, const bn254_snarks_fp* u, const bn254_snarks_fp* v);
secret_bool ctt_bn254_snarks_fp2_is_eq(const bn254_snarks_fp2* a, const bn254_snarks_fp2* b);
secret_bool ctt_bn254_snarks_fp2_is_zero(const bn254_snarks_fp2* a);
secret_bool ctt_bn254_snarks_fp2_is_one(const bn254_snarks_fp2* a);
secret_bool ctt_bn254_snarks_fp2_is_minus_one(const bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_set_zero(bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_set_one(bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_set_minus_one(bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_neg(bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_sum(bn254_snarks_fp2* r, const bn254_snarks_fp2* a, const bn254_snarks_fp2* b);
void        ctt_bn254_snarks_fp2_add_in_place(bn254_snarks_fp2* a, const bn254_snarks_fp2* b);
void        ctt_bn254_snarks_fp2_diff(bn254_snarks_fp2* r, const bn254_snarks_fp2* a, const bn254_snarks_fp2* b);
void        ctt_bn254_snarks_fp2_sub_in_place(bn254_snarks_fp2* a, const bn254_snarks_fp2* b);
void        ctt_bn254_snarks_fp2_double(bn254_snarks_fp2* r, const bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_double_in_place(bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_conj(bn254_snarks_fp2* r, const bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_conj_in_place(bn254_snarks_fp2* a);
void        ctt_bn254_snarks_fp2_conjneg(bn254_snarks_fp2* r, const bn254_snarks_fp2* a);