constantine-rust/constantine-sys/src/bindings64.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of bn254_snarks_g2_prj"][::core::mem::size_of::<bn254_snarks_g2_prj>() - 192usize];
    ["Alignment of bn254_snarks_g2_prj"][::core::mem::align_of::<bn254_snarks_g2_prj>() - 8usize];
    ["Offset of field: bn254_snarks_g2_prj::x"]
        [::core::mem::offset_of!(bn254_snarks_g2_prj, x) - 0usize];
    ["Offset of field: bn254_snarks_g2_prj::y"]
        [::core::mem::offset_of!(bn254_snarks_g2_prj, y) - 64usize];
    ["Offset of field: bn254_snarks_g2_prj::z"]
        [::core::mem::offset_of!(bn254_snarks_g2_prj, z) - 128usize];
};
unsafe extern "C" {
    pub fn ctt_big254_from_bn254_snarks_fr(dst: *mut big254, src: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_from_big254(dst: *mut bn254_snarks_fr, src: *const big254);
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_bn254_snarks_fr_unmarshalBE(
        dst: *mut bn254_snarks_fr,
        src: *const byte,
        src_len: usize,
    ) -> bool;
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_bn254_snarks_fr_marshalBE(
        dst: *mut byte,
        dst_len: usize,
        src: *const bn254_snarks_fr,
    ) -> bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_is_eq(
        a: *const bn254_snarks_fr,
        b: *const bn254_snarks_fr,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_is_zero(a: *const bn254_snarks_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_is_one(a: *const bn254_snarks_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_is_minus_one(a: *const bn254_snarks_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_set_zero(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_set_one(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_set_minus_one(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_neg(r: *mut bn254_snarks_fr, a: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_neg_in_place(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_sum(
        r: *mut bn254_snarks_fr,
        a: *const bn254_snarks_fr,
        b: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_add_in_place(a: *mut bn254_snarks_fr, b: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_diff(
        r: *mut bn254_snarks_fr,
        a: *const bn254_snarks_fr,
        b: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_sub_in_place(a: *mut bn254_snarks_fr, b: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_double(r: *mut bn254_snarks_fr, a: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_double_in_place(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_prod(
        r: *mut bn254_snarks_fr,
        a: *const bn254_snarks_fr,
        b: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_mul_in_place(a: *mut bn254_snarks_fr, b: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_square(r: *mut bn254_snarks_fr, a: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_square_in_place(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_div2(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_inv(r: *mut bn254_snarks_fr, a: *const bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_inv_in_place(a: *mut bn254_snarks_fr);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_ccopy(
        a: *mut bn254_snarks_fr,
        b: *const bn254_snarks_fr,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_cswap(
        a: *mut bn254_snarks_fr,
        b: *mut bn254_snarks_fr,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_cset_zero(a: *mut bn254_snarks_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_cset_one(a: *mut bn254_snarks_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_cneg_in_place(a: *mut bn254_snarks_fr, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_cadd_in_place(
        a: *mut bn254_snarks_fr,
        b: *const bn254_snarks_fr,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fr_csub_in_place(
        a: *mut bn254_snarks_fr,
        b: *const bn254_snarks_fr,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_big254_from_bn254_snarks_fp(dst: *mut big254, src: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_from_big254(dst: *mut bn254_snarks_fp, src: *const big254);
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_bn254_snarks_fp_unmarshalBE(
        dst: *mut bn254_snarks_fp,
        src: *const byte,
        src_len: usize,
    ) -> bool;
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_bn254_snarks_fp_marshalBE(
        dst: *mut byte,
        dst_len: usize,
        src: *const bn254_snarks_fp,
    ) -> bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_is_eq(
        a: *const bn254_snarks_fp,
        b: *const bn254_snarks_fp,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_is_zero(a: *const bn254_snarks_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_is_one(a: *const bn254_snarks_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_is_minus_one(a: *const bn254_snarks_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_set_zero(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_set_one(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_set_minus_one(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_neg(r: *mut bn254_snarks_fp, a: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_neg_in_place(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_sum(
        r: *mut bn254_snarks_fp,
        a: *const bn254_snarks_fp,
        b: *const bn254_snarks_fp,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_add_in_place(a: *mut bn254_snarks_fp, b: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_diff(
        r: *mut bn254_snarks_fp,
        a: *const bn254_snarks_fp,
        b: *const bn254_snarks_fp,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_sub_in_place(a: *mut bn254_snarks_fp, b: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_double(r: *mut bn254_snarks_fp, a: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_double_in_place(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_prod(
        r: *mut bn254_snarks_fp,
        a: *const bn254_snarks_fp,
        b: *const bn254_snarks_fp,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_mul_in_place(a: *mut bn254_snarks_fp, b: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_square(r: *mut bn254_snarks_fp, a: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_square_in_place(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_div2(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_inv(r: *mut bn254_snarks_fp, a: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_inv_in_place(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_ccopy(
        a: *mut bn254_snarks_fp,
        b: *const bn254_snarks_fp,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_cswap(
        a: *mut bn254_snarks_fp,
        b: *mut bn254_snarks_fp,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_cset_zero(a: *mut bn254_snarks_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_cset_one(a: *mut bn254_snarks_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_cneg_in_place(a: *mut bn254_snarks_fp, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_cadd_in_place(
        a: *mut bn254_snarks_fp,
        b: *const bn254_snarks_fp,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_csub_in_place(
        a: *mut bn254_snarks_fp,
        b: *const bn254_snarks_fp,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_is_square(a: *const bn254_snarks_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_invsqrt(r: *mut bn254_snarks_fp, a: *const bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_invsqrt_in_place(
        r: *mut bn254_snarks_fp,
        a: *const bn254_snarks_fp,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_sqrt_in_place(a: *mut bn254_snarks_fp);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_sqrt_if_square_in_place(a: *mut bn254_snarks_fp) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_sqrt_invsqrt(
        sqrt: *mut bn254_snarks_fp,
        invsqrt: *mut bn254_snarks_fp,
        a: *const bn254_snarks_fp,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_sqrt_invsqrt_if_square(
        sqrt: *mut bn254_snarks_fp,
        invsqrt: *mut bn254_snarks_fp,
        a: *const bn254_snarks_fp,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp_sqrt_ratio_if_square(
        r: *mut bn254_snarks_fp,
        u: *const bn254_snarks_fp,
        v: *const bn254_snarks_fp,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_is_eq(
        a: *const bn254_snarks_fp2,
        b: *const bn254_snarks_fp2,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_is_zero(a: *const bn254_snarks_fp2) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_is_one(a: *const bn254_snarks_fp2) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_is_minus_one(a: *const bn254_snarks_fp2) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_set_zero(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_set_one(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_set_minus_one(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_neg(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_sum(
        r: *mut bn254_snarks_fp2,
        a: *const bn254_snarks_fp2,
        b: *const bn254_snarks_fp2,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_add_in_place(a: *mut bn254_snarks_fp2, b: *const bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_diff(
        r: *mut bn254_snarks_fp2,
        a: *const bn254_snarks_fp2,
        b: *const bn254_snarks_fp2,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_sub_in_place(a: *mut bn254_snarks_fp2, b: *const bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_double(r: *mut bn254_snarks_fp2, a: *const bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_double_in_place(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_conj(r: *mut bn254_snarks_fp2, a: *const bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_conj_in_place(a: *mut bn254_snarks_fp2);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_fp2_conjneg(r: *mut bn254_snarks_fp2, a: *const bn254_snarks_fp2);
}
